[project]
name = "yellow-taxi-trip-records-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "findspark>=2.0.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pymongo>=4.14.0",
    "pyspark>=4.0.0",
]
